Missing files + load blockly CSS directly for better response

--- a/src/main/resources/blockly/blockly.html
+++ b/src/main/resources/blockly/blockly.html
@@ -9,6 +9,7 @@
     <script src="classloader://jsdist/blocks_compressed.js"></script>
 
     <link rel="stylesheet" type="text/css" href="classloader://blockly/css/mcreator_blockly.css">
+    <link rel="stylesheet" type="text/css" href="classloader://themes/[BLOCKLY_THEME_ID]/styles/blockly.css">
 </head>
 <body>
 
